add note about max 20

--- a/ac.html
+++ b/ac.html
@@ -42,6 +42,7 @@ body {
 <body>
 <h2>Meteor Shower - 5 Jul</h2>
 <h4>Dodo Code: <span id="dodo"></span></h4>
+<div class="main">Please note there's a limit of 20 meteorites per island per day! Therefore, it's effectively pointless to get more than 20 meteorites.</div>
 <div class="main">
 Please note that I'm using my cell phone data plan for network play (local internet blocks P2P). Therefore, gifts (gold nuggets, NMTs, rare recipes) are greatly appreciated (but not required!).
 </div>
