--- a/ac.html
+++ b/ac.html
@@ -4,7 +4,7 @@
   <title>Meteor Shower on Etaoin</title>
   <meta charset="utf-8" />
   <script type="text/javascript">
-const DODO_CODE = "TBD";
+const DODO_CODE = "5JFX0";
 
 window.addEventListener("DOMContentLoaded", function() {
   const $t = document.querySelector("title");
